--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="search-engine-optimization">Search Engine Optimization</a>
-                <!--removed id tag to class -->
+                    <a href="#search-engine-optimization">Search Engine Optimization</a>    
                 </li>
                 <li>
                     <a href="#online-reputation-management">Online Reputation Management</a>
@@ -30,15 +29,16 @@
     </header>
     <div class="hero"></div>
     <main>
-        <section class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+        <section  id="search-engine-optimization" class="search-engine-optimization">
+            <!--added id class to follow html semantics-->
+            <img src="/assets/images/search-engine-optimization.jpg" alt="search engine" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
         <section id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="/assets/images/online-reputation-management.jpg" alt="online reputation" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -69,7 +69,8 @@
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="/assets/images/cost-management.png"></img>
+            <img src="/assets/images/cost-management.png"/>
+            <!--removed image tag on the end-->
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
