--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </header>
     <div class="hero"></div>
     <main>
+        <!--added alt attributes to img tags-->
         <section  id="search-engine-optimization" class="search-engine-optimization">
             <!--added id class to follow html semantics-->
             <img src="/assets/images/search-engine-optimization.jpg" alt="search engine" class="float-left" />
@@ -45,7 +46,7 @@
             </p>
         </section>
         <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="social media" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
