--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
-    <header>
+    <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav>
+        <!--updated divs to match css-->
+        <div class="nav-tabs">
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>    
@@ -25,21 +26,21 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </nav>
-    </header>
+        </div>
+    </div>
     <div class="hero"></div>
     <main>
         <!--added alt attributes to img tags-->
         <section  id="search-engine-optimization" class="search-engine-optimization">
             <!--added id class to follow html semantics-->
-            <img src="/assets/images/search-engine-optimization.jpg" alt="search engine" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="search engine" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
         <section id="online-reputation-management" class="online-reputation-management">
-            <img src="/assets/images/online-reputation-management.jpg" alt="online reputation" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="online reputation" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -54,23 +55,24 @@
         </section>
     </main>
     <aside>
-        <div class="benefit-lead">
+        <!--updated img locations-->
+        <div class="benefits">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefits">
             <h3>Brand Awareness</h3>
-            <img src="/assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefits">
             <h3>Cost Management</h3>
-            <img src="/assets/images/cost-management.png"/>
+            <img src="./assets/images/cost-management.png"/>
             <!--removed image tag on the end-->
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
