--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
         <!--updated img locations-->
         <div class="benefits">
-        <div class="benefit-leads">
+        <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
